
History
-------

0.6 - 10/24/2010
~~~~~~~~~~~~~~~~

- No really, revert 'add Plone to install_requires'
- Add docs/HISTORY.txt
- Add more troubleshooting tips to consternation section
- Allow user to specify path to Plone site object
- Allow user to configure all customizable settings in both ``buildout.cfg``
  and via command line arguments.

0.5 - 10/22/2010
~~~~~~~~~~~~~~~~

- Revert 'add Plone to install_requires'

0.4 - 10/22/2010
~~~~~~~~~~~~~~~~

- Add 'Plone' to install_requires

0.3 - 10/22/2010
~~~~~~~~~~~~~~~~

- Another setuptools fix

0.2 - 10/22/2010
~~~~~~~~~~~~~~~~

- Setuptools fix

0.1 - 10/21/2010
~~~~~~~~~~~~~~~~

- Initial release